# f2

./: CMakeLists.txt  README.md  asset_template.cpp  assets_codegen.cpp
.github/workflows/: build.yml
assets_codegen/: asset_template.hpp  assets_codegen.cpp  header_template.hpp  image_template.hpp  obj_template.hpp  shader_source_template.hpp
include/f2/asset/: asset.hpp  image.hpp
include/f2/render/: buffer.hpp  camera.hpp  custom_shader.hpp  mesh.hpp  shader.hpp  transform.hpp  vao.hpp
include/f2/runtime/: frame.hpp  initializer.hpp  window.hpp
include/f2/util/: color.hpp  scoped_bind.hpp  string_literal.hpp  type_to_enum.hpp  visit.hpp
src/asset/: image.cpp
src/render/: buffer.cpp  camera.cpp  custom_shader.cpp  mesh.cpp  shader.cpp  transform.cpp  transform.hpp  vao.cpp
src/render/shaders/: lambert.frag  lambert.vert
src/runtime/: frame.cpp  initializer.cpp  window.cpp
src/util/: color.cpp
test/: main.cpp
